# phylotrackpy

./: .gitignore  .gitmodules  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  __init__.py  codecov.yml  constraints.in  pyproject.toml  requirements.in  requirements.sh  requirements.txt  setup.cfg  setup.py  setup_old_cpp.py  systematics_bindings.cpp  test_systematics.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  python-app.yml  test.yml
docs/: Makefile  api.md  bibliography.bib  community.md  conf.py  context.md  example_usage.ipynb  features.md  index.md  introduction.md  planning.md  position_tracking.md  quickstart.md  requirements.txt  systematics.md
docs/path/to/: phylo.csv  phylo.nexus
joss/: letter.md  paper.bib  paper.md
phylotrackpy/: __init__.py
profile/: .gitignore  profile_batch.sh  profile_job.py  requirements.in  requirements.txt
test/: requirements.txt  test_systematics.py
test/assets/: consolidated.csv  extant_root.csv  systematics_snapshot.csv
test/assets/docs/: bibliography.bib  glossary.md  introduction.md  phylo.nexml  phylo.nexus  requirements.txt
test/docs/: api.md  community.md  conf.py  context.md  quickstart.md
tests/: tests.py
