[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest -m \"not nowheel\" {project}"
skip = "*musllinux*"
test-requires = "pytest"
before-test = "cp {project}/test/assets/* ."

[tool.pytest.ini_options]
markers = [
    "nowheel"
]