[build-system]
requires = [
    "setuptools>=42, <72.2.0",
    "wheel",
    "pybind11>=2.8.0",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Enable free-threaded support
free-threaded-support = true
test-command = "pytest -m \"not nowheel\" {project}"
skip = ["*musllinux*", "cp37*", "pp37*", "cp38*", "pp38*", "*i686*", "*win32*"]
test-requires = "pytest"
before-test = "cp {project}/test/assets/* ."
before-all = "g++ --version"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-pypy_x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"

[tool.pytest.ini_options]
markers = [
    "nowheel"
]
