[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:docs/conf.py]
search = ='{current_version}'
replace = ='{new_version}'

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:interval_search/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

# adapted from https://stackoverflow.com/a/58062850/17332200
[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
