[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:docs/conf.py]
search = = "{current_version}"
replace = = "{new_version}"

[bumpversion:file:setup.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:phylotrackpy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
